--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -241,6 +241,24 @@ section {
     justify-content: center;
 }
 
+.data-table table {
+    margin: 6px auto;
+    border: 1px solid var(--color-purple);
+}
+
+.data-table table thead tr th,
+.data-table table tbody tr td {
+    padding: 3px 12px;
+}
+
+.data-table table tbody tr:nth-of-type(odd){
+    background-color: silver;
+}
+
+.data-table table tbody tr:nth-of-type(even){
+    background-color: white;
+}
+
 .square-button {
     width: 120px;
     height: 120px;
