--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -248,7 +248,7 @@ section {
 
 .data-table table thead tr th,
 .data-table table tbody tr td {
-    padding: 3px 12px;
+    padding: 6px 12px;
 }
 
 .data-table table tbody tr:nth-of-type(odd){
@@ -270,6 +270,9 @@ section {
     text-align: center;
 }
 
+.centered {
+    text-align: center;
+}
 .input-error {
     background-color: red;
 }
