--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -243,7 +243,8 @@ section {
 
 .data-table table {
     margin: 6px auto;
-    border: 1px solid var(--color-purple);
+    border: 3px solid var(--color-purple);
+    border-radius: 12px;
 }
 
 .data-table table thead tr th,
@@ -263,6 +264,11 @@ section {
     width: 120px;
     height: 120px;
     font-size: 1.2em;
+}
+
+.small-button {
+    padding: 6px 12px;
+    width: 60px;
 }
 
 .sys-msg {
