--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -87,6 +87,7 @@ body {
     font-size: 15px;
     background-color: var(--color-blue);
     color: white;
+    border-radius: 12px; 
 }
 
 header {
